--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <h1>Log in</h1>
 
-<form class="form-horizontal" ng-submit="login()" name="loginForm" role="form">
+<form class="form-horizontal" data-ng-submit="login()" name="loginForm" role="form">
   <div class="form-group">
     <label class="control-label col-sm-2" for="username">Username</label>
     <div class="col-sm-10">
