--- a/templates/register.html
+++ b/templates/register.html
@@ -1,39 +1,65 @@
 <h1>Register</h1>
 
-code is commented out for now since it needs to be convertered from Jade
-
-<!--
-form.form-horizontal(ng-submit="register()", name="registerForm", role="form")
-    .form-group
-        label.control-label.col-sm-2(for="username") Username
-        .col-sm-10
-            input.form-control(type="text", data-ng-model="username", placeholder="Username", name="username", required, data-ng-minlength="1", data-ng-maxlength="20", autofocus)
-    .form-group
-        label.control-label.col-sm-2(for="password") Password
-        .col-sm-10
-            input.form-control(type="password", data-ng-model="password", placeholder="Password", name="password", required, data-ng-minlength="5", data-ng-maxlength="60")
-    .form-group
-        .radio.radio-inline
-            label
-                input(type="radio", name="role", data-ng-model="role", id="adminRole", data-ng-value="userRoles.admin")
-                | Administrator
-        .radio.radio-inline
-            label
-                input(type="radio", name="role", data-ng-model="role", id="adminRole", data-ng-value="userRoles.user")
-                | Normal user
-    .form-group
-        .controls
-            button.btn(type="submit", data-ng-disabled="registerForm.$invalid") Submit
-
-    .alert.alert-danger(ng-show="registerForm.$invalid && registerForm.$dirty")
-        strong Please correct the following errors:
-        ul
-            li(ng-show="registerForm.username.$error.required") Username is required
-            li(ng-show="registerForm.username.$error.minlength") Username has to be at least 1 character long
-            li(ng-show="registerForm.username.$error.maxlength") Username has to be at most 20 character long
-            li(ng-show="registerForm.password.$error.required") Password is required
-            li(ng-show="registerForm.password.$error.minlength") Password must be at least 5 characters long
-            li(ng-show="registerForm.password.$error.maxlength") Password must be at most 60 characters long
-
--->
+<div class="col-sm-7">
+  <form class="form-horizontal" ng-submit="register()" name="registerForm", role="form">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">First Name</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" data-ng-model="firstName" placeholder="First Name" name="firstName" required="required" data-ng-minlength="1" data-ng-maxlength="20" autofocus="autofocus">
+        </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Last Name</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" data-ng-model="lastName" placeholder="Last Name" name="lastName" required="required" data-ng-minlength="1" data-ng-maxlength="20" autofocus="autofocus">
+        </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Email</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" data-ng-model="email" placeholder="Email" name="email" required="required" data-ng-minlength="1" data-ng-maxlength="20" autofocus="autofocus">
+        </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="password">Password</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="password" data-ng-model="password" placeholder="Password" name="password" required="required" data-ng-minlength="5" data-ng-maxlength="60">
+        </div>
+    </div>
+    <div class="form-group">
+      <div class="radio radio-inline">
+        <label>
+          <input type="radio" name="role" data-ng-model="role" id="adminRole" data-ng-value="userRoles.admin"> Administrator
+        </label>
+      </div>
+      <div class="radio radio-inline">
+        <label>
+          <input type="radio" name="role" data-ng-model="role" id="adminRole" data-ng-value="userRoles.user"> Normal user
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <button class="btn btn-primary" type="submit" data-ng-disabled="registerForm.$invalid">Submit</button>
+      </div>
+    </div>
+    <div class="alert alert-danger" ng-show="registerForm.$invalid && registerForm.$dirty">
+      <strong>Please correct the following errors:</strong>
+        <ul>
+          <li ng-show="registerForm.firstName.$error.required">First Name is required</li>
+          <li ng-show="registerForm.firstName.$error.minlength">First Name has to be at least 1 character long</li>
+          <li ng-show="registerForm.firstName.$error.maxlength">First Name has to be at most 20 character long</li>
+          <li ng-show="registerForm.lastName.$error.required">Last Name is required</li>
+          <li ng-show="registerForm.lastName.$error.minlength">Last Name has to be at least 1 character long</li>
+          <li ng-show="registerForm.lastName.$error.maxlength">Last Name has to be at most 20 character long</li>
+          <li ng-show="registerForm.email.$error.required">Email is required</li>
+          <li ng-show="registerForm.email.$error.minlength">Email has to be at least 1 character long</li>
+          <li ng-show="registerForm.email.$error.maxlength">Email has to be at most 20 character long</li>
+          <li ng-show="registerForm.password.$error.required">Password is required</li>
+          <li ng-show="registerForm.password.$error.minlength">Password must be at least 5 characters long</li>
+          <li ng-show="registerForm.password.$error.maxlength">Password must be at most 40 characters long</li>
+        </ul>
+    </div>
+  </form>
+</div>
 
